# nsupdate.info

./: .coveragerc  .gitignore  .pylintrc  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGES.rst  DEVELOPMENT.md  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  SECURITY.md  conftest.py  django-registration-dj16-fix.diff  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: ci.yml
.junie/skills/translate/: SKILL.md
.junie/skills/translate/glossaries/: de.md  el.md  fr.md  hu.md  it.md
.junie/skills/translate/scripts/: find_missing.py
.tx/: config
docker/: Dockerfile  Readme.md  docker-compose.yml  docker-entrypoint.sh  local_settings.py.default
docs/: CHANGES.rst  Makefile  admin.rst  conf.py  index.rst  intro.rst  make.bat  project.rst  security.rst  standards.rst  user.rst
docs/_build/: .gitignore
docs/examples/: bind9-nsupdate.info-zonefile
docs/examples/bind9/: named.conf  nsupdate.info-zonefile
docs/examples/nginx_gunicorn/: gunicorn_start  nginx.conf  supervisor.conf
logo/: README
misc/contrib/docker/: .dockerignore  Makefile
nsupdate/: __init__.py  context_processors.py  manage.py  settings.py  urls.py  wsgi.py
nsupdate/accounts/: forms.py  models.py  urls.py  views.py
nsupdate/accounts/_tests/: test_accounts.py
nsupdate/accounts/migrations/: 0001_initial.py  0002_auto_20141125_2325.py
nsupdate/accounts/templates/accounts/: delete_user.html  user_profile.html  user_settings_account.html  user_settings_base.html
nsupdate/accounts/templates/registration/: activate.html  activation_complete.html  activation_email.html  activation_email.txt  activation_email_subject.txt  login.html  password_change.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  registration_base.html  registration_complete.html  registration_form.html
nsupdate/api/: views.py
nsupdate/api/_tests/: test_api.py
nsupdate/locale/de/LC_MESSAGES/: django.mo  (+1 more)
nsupdate/login/: __init__.py  urls.py
nsupdate/login/templates/: login.html  logout.html  password_change.html  password_change_done.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html
nsupdate/main/: admin.py  dnstools.py  forms.py  iptools.py  models.py  urls.py  views.py
nsupdate/main/_tests/: test_dnstools.py  test_example.py  test_main.py
nsupdate/main/migrations/: 0001_initial.py  0002_auto_20141115_2227.py  0002_auto__del_hosts__add_host.py  0003_added_comment.py  0004_updated_host_fields.py  0005_auto_20141121_1053.py  0005_auto__add_domain__del_field_host_fqdn__add_field_host_subdomain__add_f.py  0005_proxy_user.py  0006_auto__add_blacklisteddomain.py  0006_remove_proxy_user.py  0007_auto_20150425_1741.py  0007_auto__chg_field_blacklisteddomain_created_by.py  0008_auto_20151229_1255.py  0008_auto__chg_field_domain_created_by.py  0009_added_last_api_update_field.py  0010_auto_20151229_1717.py  0010_auto__add_field_domain_nameserver_ip__add_field_domain_nameserver_upda.py  0011_auto_20170526_2113.py  0011_auto__add_field_domain_nameserver_update_algorithm__add_field_domain_a.py  0012_auto__add_field_domain_available.py  0013_auto__del_field_domain_available_for_everyone__add_field_domain_public.py  0014_auto__del_field_host_last_api_update__add_field_host_last_update_ipv4_.py  0015_auto__add_field_domain_comment.py  0016_auto__add_field_host_ssl_update_ipv4__add_field_host_ssl_update_ipv6.py  0017_auto__chg_field_host_comment__chg_field_host_update_secret__chg_field_.py  0018_auto__del_field_domain_nameserver_update_key__add_field_domain_nameser.py  0019_auto__chg_field_blacklisteddomain_created_by__chg_field_domain_created.py  0020_auto__add_field_host_client_faults__add_field_host_server_faults.py  0021_auto__add_serviceupdater__add_serviceupdaterhostconfig.py  0022_auto__add_field_serviceupdater_accept_ipv4__add_field_serviceupdater_a.py  0023_auto__add_field_host_available__add_field_host_abuse__add_field_host_a.py  0024_auto__del_field_host_ssl_update_ipv6__del_field_host_ssl_update_ipv4__.py  0025_auto__add_field_host_client_result_msg__add_field_host_server_result_m.py  0026_auto__del_field_host_subdomain__add_field_host_name__del_unique_host_s.py  0027_auto__del_blacklisteddomain__add_blacklistedhost.py  0028_auto__add_relatedhost__add_unique_relatedhost_name_main_host.py  0029_auto__add_field_relatedhost_comment.py  0030_auto__add_field_host_netmask_ipv4__add_field_host_netmask_ipv6.py  0031_auto__chg_field_host_netmask_ipv4__chg_field_host_netmask_ipv6.py
nsupdate/management/commands/: domains.py  faults.py  hosts.py  testuser.py  users.py
nsupdate/nsupdate/: context_processors.py  settings.py  urls.py  wsgi.py
nsupdate/nsupdate/static/: 400.html  404.html  500.html
nsupdate/nsupdate/templates/: base.html
nsupdate/settings/: base.py  dev.py  prod.py
nsupdate/static/: 400.html  404.html  500.html
nsupdate/static/css/: nsupdate.css
nsupdate/templates/: 400.html  403.html  404.html  500.html  base.html  errorpage.html
nsupdate/templates/includes/: base_footer.html
nsupdate/utils/: ddns_client.py  log.py  mail.py  update_ns.js
nsupdate/utils/_tests/: test_ddns_client.py  test_mail.py
requirements.d/: all.txt  ci.txt  dev.txt  prod.txt  travis.txt
scripts/ci/: install-bind.sh  install.sh
scripts/docker/: Dockerfile  pip.conf  resolv.conf  test.sh
scripts/docker/bind/: named.conf.local
scripts/travis/: install.sh
scripts/travis/etc/: resolv.conf
src/nsupdate/: __init__.py  conftest.py  context_processors.py  urls.py  wsgi.py
src/nsupdate/accounts/: admin.py  forms.py  models.py  registration_form.py  urls.py  views.py
src/nsupdate/api/: __init__.py  models.py  utils.py  views.py
src/nsupdate/login/: urls.py
src/nsupdate/main/: admin.py  dnstools.py  forms.py  hashers.py  iptools.py  models.py  urls.py  views.py
src/nsupdate/settings/: base.py  dev.py  prod.py
src/nsupdate/templates/: base.html
src/nsupdate/utils/: ddns_client.py  dns_updater.py  dnspython.py  log.py  mail.py
(+157 files in other folders)
